--- a/12-Web/Instructions/compare.html
+++ b/12-Web/Instructions/compare.html
@@ -113,7 +113,10 @@
                             </div>
                           <div class="card-body">
                             <h5 class="card-title"> Latitude VS Temperature</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text"> The graph confirms the original hypothesis using the data to visualize a plausible observation </p>
+                          <p> 
+                              The data points forms a nonlinear regression in the shape of an ark. The tempature peaks the closer latitude is to Zero (Equator), and temperature begins to curve downward as latitude is farther away from latitude Zero. </p> 
+                            
                             <a id='Fig1' href="Resources/assets/images/Fig1.png" class="btn btn-primary">View Plot Image</a>
                           </div>
                         </div>
@@ -125,7 +128,7 @@
                               <img class="card-img-top" src='Resources/assets/images/Fig2.png' alt="Card image cap">
                               <div class="card-body">
                                 <h5 class="card-title"> Latitude VS Humidity</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text"> The data in this graph is insufficient to make any clear observations comparing Latitude VS Humidity.</p>
                                 <a id='Fig2' href="Resources/assets/images/Fig2.png" class="btn btn-primary">View Plot Image</a>
                               </div>
                             </div>
@@ -138,7 +141,7 @@
                               <img class="card-img-top" src='Resources/assets/images/Fig3.png' alt="Card image cap">
                               <div class="card-body">
                                 <h5 class="card-title"> Latitude VS Cloudiness</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text">The data in this graph is insufficient to make any clear observations comparing Latitude VS Cloudiness.</p>
                                 <a id='Fig3' href="Resources/assets/images/Fig3.png" class="btn btn-primary">View Plot Image</a>
                               </div>
                             </div>
@@ -151,7 +154,7 @@
                               <img class="card-img-top" src='Resources/assets/images/Fig4.png' alt="Card image cap">
                               <div class="card-body">
                                 <h5 class="card-title"> Latitude VS Windiness</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text">The data in this graph is insufficient to make any clear observations comparing Latitude VS Windiness. </p>
                                 <a id='Fig4' href="Resources/assets/images/Fig4.png" class="btn btn-primary">View Plot Image</a>
                               </div>
                             </div>
